--- a/days/025-028-javascript/demo/language/objects/food.html
+++ b/days/025-028-javascript/demo/language/objects/food.html
@@ -18,7 +18,16 @@
   {Sausage McMuffin [3.9 oz / 111 g]: "370"}
   */
 
-  // you code
+  var food = [
+      {"Egg McMuffin [4.8 oz / 136 g]": 300},
+      {"Egg White Delight [4.8 oz / 135 g]": 250},
+      {"Sausage McMuffin [3.9 oz / 111 g]": 370}
+  ];
+
+  for (let line of food) {
+    console.log(line);
+  }
+
   </script>
 </body>
 </html>
